--- a/packages/client/src/theme.css
+++ b/packages/client/src/theme.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  position: relative;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,8 +17,15 @@ body {
   flex-direction: column;
   align-items: center;
   color: #222;
+  padding-bottom: 8rem;
 }
 
 * {
   box-sizing: border-box;
+}
+
+@media (max-width: 456px) {
+  html{
+    font-size: 80%;
+  }
 }
